tests/macro_tests/no_ident.stderr
error: expected name-value pair 'ident = 'x''
  --> $DIR/no_ident.rs:11:5
   |
11 |     QMark,
   |     ^^^^^
